--- a/randomizer.ui
+++ b/randomizer.ui
@@ -1062,6 +1062,92 @@
       </spacer>
      </item>
      <item>
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Number of seeds to generate:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="num_seeds_to_create">
+       <property name="minimumSize">
+        <size>
+         <width>75</width>
+         <height>26</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>75</width>
+         <height>26</height>
+        </size>
+       </property>
+       <item>
+        <property name="text">
+         <string>1 seed</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>2 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>3 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>4 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>5 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>6 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>7 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>8 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>9 seeds</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>10 seeds</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
       <widget class="QPushButton" name="randomize_button">
        <property name="text">
         <string>Randomize</string>
