--- a/randomizer.ui
+++ b/randomizer.ui
@@ -761,6 +761,16 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="dos_new_style_map">
+            <property name="toolTip">
+             <string>Makes the map in DoS look like the map in PoR and OoE - doors have a hole in them and the colors have better contrast.</string>
+            </property>
+            <property name="text">
+             <string>New Style Map</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
